[gd_scene load_steps=5 format=3 uid="uid://d3l0arylk0h43"]

[ext_resource type="PackedScene" uid="uid://dldxcm1l8nnnf" path="res://addons/rivet/devtools/elements/logo_container.tscn" id="1_nj27r"]
[ext_resource type="Script" path="res://addons/rivet/devtools/dock/installer.gd" id="1_s8aji"]
[ext_resource type="PackedScene" uid="uid://bk1uwgw1hhq2p" path="res://addons/rivet/devtools/elements/links_container.tscn" id="2_rgtqq"]
[ext_resource type="PackedScene" uid="uid://cdad7w76me3eu" path="res://addons/rivet/devtools/elements/loading_button.tscn" id="4_ahrlb"]

[node name="Installer" type="VBoxContainer"]
offset_right = 500.0
offset_bottom = 1000.0
script = ExtResource("1_s8aji")

[node name="LogoContainer" parent="." instance=ExtResource("1_nj27r")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="LinksContainer" parent="." instance=ExtResource("2_rgtqq")]
layout_mode = 2

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Gap3" type="BoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InstallLabel" type="RichTextLabel" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Install Rivet CLI[/b]

The Rivet CLI ([code]%%version%%[/code]) is required to use this plugin.
[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Gap" type="BoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="InstallButton" parent="CenterContainer" instance=ExtResource("4_ahrlb")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "Install CLI"

[node name="Gap2" type="BoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TipLabel" type="RichTextLabel" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]This will install to [code]%%bin_dir%%[/code]. Override this at [code]Editor Settings > Rivet > Cli Executable Path[/code]. See [url=\"https://github.com/rivet-gg/cli\"]github.com/rivet-gg/cli[/url] for more details.[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="InstallDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(112, 100)

[connection signal="meta_clicked" from="CenterContainer/TipLabel" to="." method="_on_tip_label_meta_clicked"]
